--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.24)
-set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libraries)
+set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 project(Arcade)
 
 set(CMAKE_CXX_STANDARD 14)
@@ -9,4 +9,4 @@ include_directories(include)
 add_executable(arcade
         src/main.cpp)
 
-add_subdirectory(include/Libraries)
+add_subdirectory(libraries)
