--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -9,6 +9,10 @@ add_library(arcade_sdl2 SHARED)
 
 add_library(arcade_ncurses SHARED)
 
+add_library(arcade_snake SHARED)
+
+add_library(arcade_pacman SHARED)
+
 # libSFML
 
 set_target_properties(
@@ -52,4 +56,34 @@ target_sources(
         PRIVATE
         Graphical/NCURSES/LibNCURSES.cpp
         Graphical/NCURSES/LibNCURSES.hpp
+)
+
+# libSnake
+
+set_target_properties(
+        arcade_snake
+        PROPERTIES
+        PREFIX ""
+)
+
+target_sources(
+        arcade_snake
+        PRIVATE
+        Games/Snake/Snake.cpp
+        Games/Snake/Snake.hpp
+)
+
+# libPacman
+
+set_target_properties(
+        arcade_pacman
+        PROPERTIES
+        PREFIX ""
+)
+
+target_sources(
+        arcade_pacman
+        PRIVATE
+        Games/Pacman/Pacman.cpp
+        Games/Pacman/Pacman.hpp
 )
