[+] Tier Lib SFML SDL NCURSES added

--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -3,8 +3,10 @@ project(Arcade_libraries)
 
 set(CMAKE_CXX_STANDARD 14)
 
+find_package(SFML 2.5 COMPONENTS graphics window system audio REQUIRED)
 add_library(arcade_sfml SHARED)
 
+find_package(SDL2 REQUIRED)
 add_library(arcade_sdl2 SHARED)
 
 add_library(arcade_ncurses SHARED)
@@ -28,6 +30,9 @@ target_sources(
         Graphical/SFML/LibSFML.hpp
 )
 
+target_link_libraries(arcade_sfml sfml-graphics sfml-window sfml-system)
+
+
 # libSDL
 
 set_target_properties(
@@ -43,6 +48,8 @@ target_sources(
         Graphical/SDL/LibSDL.hpp
 )
 
+target_link_libraries(arcade_sdl2 SDL2)
+
 # libNCURSES
 
 set_target_properties(
@@ -57,6 +64,8 @@ target_sources(
         Graphical/NCURSES/LibNCURSES.cpp
         Graphical/NCURSES/LibNCURSES.hpp
 )
+
+target_link_libraries(arcade_ncurses ncurses)
 
 # libSnake
 
