--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,11 @@ set(CMAKE_CXX_STANDARD 14)
 
 include_directories(include)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+
 add_executable(arcade
         src/main.cpp
         src/Core/Core.cpp include/Core.hpp
-        src/Utils.cpp src/Utils.cpp)
+        src/Utils.cpp src/Utils.cpp src/Core/Text.hpp src/Core/Text.cpp)
 
 add_subdirectory(libraries)
