--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.24)
-set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
 project(Arcade)
 
 set(CMAKE_CXX_STANDARD 14)
@@ -15,5 +15,7 @@ add_executable(arcade
         src/Core/Text.cpp include/Text.hpp
         include/Entity.hpp src/Core/Entity.cpp
         include/Button.hpp src/Core/Button.cpp)
+
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
 
 add_subdirectory(libraries)
