[+] pacman map set + pacman movement

--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -108,6 +108,8 @@ target_sources(
         Games/Pacman/Pacman.hpp
         Games/Pacman/Grid.cpp
         Games/Pacman/Grid.hpp
+        Games/Pacman/Entity.cpp
+        Games/Pacman/Entity.hpp
 )
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
