--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,7 @@ include_directories(include)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 
-add_executable(
-        arcade
+add_executable(arcade
         src/main.cpp
         src/Utils.cpp
         src/Core/Core.cpp
